# slomo

./: .atlas-analysis.json  .gitignore  LICENSE  README.md  installation.mdx  introduction.mdx  pyproject.toml  quickstart.mdx
.github/workflows/: release.yml
.playwright-mcp/: page-2026-07-17T07-05-51-923Z.yml  page-2026-07-17T07-06-36-448Z.yml
concepts/: how-it-works.mdx  issues.mdx  sessions-and-events.mdx
configuration/: config-toml.mdx  environment-variables.mdx  storage-layout.mdx
docs/: docs.json  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
docs/concepts/: how-it-works.mdx  issues.mdx  sessions-and-events.mdx
docs/configuration/: config-toml.mdx  environment-variables.mdx  storage-layout.mdx
docs/investigating/: exporting.mdx  issues-workflow.mdx  replay.mdx  search-and-timeline.mdx
docs/recording/: auto-tracing.mdx  manual-instrumentation.mdx  redaction.mdx  web-frameworks.mdx  workers-and-async.mdx
docs/reference/: python-api.mdx
examples/: README.md  async_pipeline.py  autotrace_demo.py  background_worker.py  demo_app.py  fastapi_app.py  flask_app.py  redaction_demo.py
investigating/: exporting.mdx  issues-workflow.mdx  replay.mdx  search-and-timeline.mdx
recording/: auto-tracing.mdx  manual-instrumentation.mdx  redaction.mdx  web-frameworks.mdx  workers-and-async.mdx
reference/: python-api.mdx
reference/cli/: data-views.mdx  doctor.mdx  export.mdx  issues.mdx  maintenance.mdx  overview.mdx  replay.mdx  search.mdx  sessions.mdx  timeline.mdx
src/slomo/: __init__.py  track.py
tests/: conftest.py  test_autotrace.py  test_cli.py  test_core.py  test_integration.py  test_issues.py  test_recording.py  test_replay_and_search.py
(+50 files in other folders)
