[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slomo"
version = "0.1.1"
description = "The black box flight recorder for Python applications — record, replay, and diagnose crashes from your terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Amit" }]
keywords = ["debugging", "flight-recorder", "replay", "tracing", "crash", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/apilens/slomo"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
    "ruff>=0.4",
    "mypy>=1.10",
    "requests>=2.31",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
]

[project.scripts]
slomo = "slomo.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slomo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: slow tests (perf, subprocess-heavy)"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/slomo/cli/app.py" = ["B008"]  # typer.Option/Argument defaults are Typer's API

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
